Section Join Hosts, Footer - added

--- a/HomePage.css
+++ b/HomePage.css
@@ -138,6 +138,7 @@ body {
 }
 
 #homePage-navigation > a {
+  font-size: 1.3vw;
   text-decoration: none;
   margin: 1vw;
   color: white;
@@ -197,7 +198,7 @@ body {
 #homePage-filter-menu {
   display: flex;
   width: 65vw;
-  height: 12vh;
+  height: 6vw;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -213,7 +214,7 @@ body {
 #experiencesPage-filter-menu {
   display: flex;
   width: 65vw;
-  height: 12vh;
+  height: 6vw;
   margin-left: auto;
   margin-right: auto;
   display: flex;
@@ -244,6 +245,9 @@ body {
 .homePage-filter-text:hover {
   background-color: rgb(214, 214, 214);
 }
+.fa-search {
+  font-size: 1.5vw;
+}
 
 #homePage-header-text {
   font-size: 7vw;
@@ -264,6 +268,7 @@ body {
   margin-left: 5vw;
   cursor: pointer;
   outline: none;
+  font-size: 1vw;
 }
 
 /* Section Towns */
@@ -287,6 +292,7 @@ body {
 }
 
 .homePage-towns-container-text {
+  font-size: 1.2vw;
   display: flex;
   width: 10vw;
   margin-left: 1vw;
@@ -329,6 +335,7 @@ body {
 }
 
 .homePage-liveAnywhere-container > p {
+  font-size: 1.5vw;
   margin-top: 0.5vw;
   font-weight: bold;
 }
@@ -398,6 +405,7 @@ body {
   position: absolute;
   top: 42vw;
   left: 2vw;
+  font-size: 1.5vw;
 }
 
 .homePage-onlineExperiences-second-containers {
@@ -435,6 +443,7 @@ body {
   left: 2vw;
   top: 21.5vw;
   color: white;
+  font-size: 1.5vw;
 }
 
 .homePage-onlineExperiences-third-container > img {
@@ -448,3 +457,102 @@ body {
   display: flex;
   justify-content: space-evenly;
 }
+
+/* Section Join Hosts */
+#homePage-joinHosts {
+  padding-top: 5vw;
+  background-color: rgb(236, 236, 236);
+}
+
+#homePage-joinHosts > p{
+  margin-left: 3.5vw;
+  font-size: 3vw;
+}
+
+.homePage-joinHosts-body {
+display: flex;
+justify-content: space-evenly;
+margin-top: 2vw;
+padding-bottom: 5vw;
+}
+
+.homePage-joinHosts-body > div {
+cursor: pointer;
+}
+
+.homePage-joinHosts-body > div > img {
+margin-bottom: 0.5vw;
+width: 28vw;
+border-radius: 1vw;
+}
+
+.homePage-joinHosts-body > div > p {
+font-weight: bold;
+font-size: 1.5vw;
+}
+
+/* footer */
+#footer {
+display: flex;
+justify-content: space-around;
+padding: 5vw 0vw;
+}
+
+#footer > div > ul {
+list-style: none;
+}
+
+#footer > div > ul > li {
+  margin-bottom: 0.5vw;
+}
+
+#footer > div > ul > li > a {
+text-decoration: none;
+font-size: 1.2vw;
+color:black;
+}
+
+#footer > div > p {
+  color: rgb(65, 65, 65);
+  font-size: 1.6vw;
+  font-weight: bold;
+  margin-bottom: 1vw;
+}
+
+/* footer 2 */
+#footer2 {
+  padding-top: 2vw;
+  padding-bottom: 2vw;
+  border-top: 0.1vw solid rgb(211, 211, 211);
+  display: flex;
+  justify-content: space-around;
+}
+
+.footer2-privacy-terms-sitemap {
+display: flex;
+justify-content: space-between;
+width: 40vw;
+}
+
+.footer2-privacy-terms-sitemap > p {
+  font-size: 1.2vw;
+}
+
+.footer2-privacy-terms-sitemap > a {
+  font-size: 1.2vw;
+  text-decoration: none;
+  color: black;
+}
+
+.footer2-socialMedia {
+  display: flex;
+  justify-content: space-around;
+  width: 10vw;
+}
+
+.footer2-socialMedia > a {
+  color: black;
+  font-size: 1.2vw;
+}
+
+
