--- a/HomePage.css
+++ b/HomePage.css
@@ -195,7 +195,7 @@ body {
   font-size: 2.2vw;
 }
 
-#homePage-filter-menu {
+#homePage-filter {
   display: flex;
   width: 65vw;
   height: 6vw;
@@ -206,23 +206,10 @@ body {
   margin-top: 3vh;
   background-color: honeydew;
   border-radius: 4vw;
-}
-#filter {
-  display: flex;
 }
 
-#experiencesPage-filter-menu {
+#homePage-filter > form {
   display: flex;
-  width: 65vw;
-  height: 6vw;
-  margin-left: auto;
-  margin-right: auto;
-  display: flex;
-  justify-content: space-around;
-  margin-top: 3vh;
-  background-color: honeydew;
-  border-radius: 4vw;
-  margin-top: auto;
 }
 
 .homePage-filter-firstText {
@@ -238,17 +225,96 @@ body {
   justify-content: center;
   flex-direction: column;
   border-radius: 4vw;
-  padding: 1vw 3.1vw;
+  padding: 1vw 2.5vw;
   cursor: pointer;
+}
+
+#homePage-filter-checkIn-div,
+#homePage-filter-checkOut-div {
+  width: 9vw;
+}
+
+#homePage-filter-guests-div {
+  width: 7vw;
+}
+
+#location {
+  width: 13.5vw;
+}
+
+#homePage-filter-submit-div {
+  padding: 0 0;
 }
 
 .homePage-filter-text:hover {
   background-color: rgb(214, 214, 214);
 }
-.fa-search {
-  font-size: 1.5vw;
+
+/* filter form */
+
+#filter-input-location {
+  background-color: transparent;
+  border-top: transparent;
+  border-left: transparent;
+  border-right: transparent;
+  border-bottom: 1px solid black;
+  outline: none;
+  width: 12.5vw;
+  font-size: 1vw;
+  display: none;
 }
 
+#filter-input-checkIn {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1vw;
+  background-color: transparent;
+  width: 8vw;
+  border-top: transparent;
+  border-left: transparent;
+  border-right: transparent;
+  border-bottom: 1px solid black;
+  outline: none;
+  display: none;
+}
+
+#filter-input-checkOut {
+  font-family: "Montserrat", sans-serif;
+  font-size: 1vw;
+  background-color: transparent;
+  width: 8vw;
+  border-top: transparent;
+  border-left: transparent;
+  border-right: transparent;
+  border-bottom: 1px solid black;
+  outline: none;
+  display: none;
+}
+
+#filter-input-guests {
+  background-color: transparent;
+  width: 5vw;
+  border-top: transparent;
+  border-left: transparent;
+  border-right: transparent;
+  border-bottom: 1px solid black;
+  outline: none;
+  font-size: 1vw;
+  display: none;
+}
+
+#filter-input-submit {
+  display: flex;
+  justify-content: center;
+  padding: 2vw 2.5vw;
+  outline: none;
+}
+
+.fa-search {
+  font-size: 1.5vw;
+  border-radius: 4vw;
+}
+
+/* header Text - button */
 #homePage-header-text {
   font-size: 7vw;
   font-weight: 900;
@@ -555,81 +621,6 @@ body {
   font-size: 1.2vw;
 }
 
-/* filter form */
-#homePage-filter-menu > form {
-  position: absolute;
-  top: 10vw;
-  display: flex;
-  width: 65vw;
-}
-
-#filter-input-location {
-  margin-left: 3vw;
-  background-color: transparent;
-  border-top: transparent;
-  border-left: transparent;
-  border-right: transparent;
-  border-bottom: 1px solid black;
-  visibility: hidden;
-  outline: none;
-}
-
-#filter-input-checkIn {
-  font-family:"Montserrat", sans-serif;
-  font-size: 1vw;
-  background-color: transparent;
-  width: 7.7vw;
-  margin-left: 6.5vw;
-  border-top: transparent;
-  border-left: transparent;
-  border-right: transparent;
-  border-bottom: 1px solid black;
-  visibility: hidden;
-  outline: none;
-  
-}
-
-#filter-input-checkOut {
-  font-family:"Montserrat", sans-serif;
-  font-size: 1vw;
-  background-color: transparent;
-  width: 7.7vw;
-  margin-left: 4.7vw;
-  border-top: transparent;
-  border-left: transparent;
-  border-right: transparent;
-  border-bottom: 1px solid black;
-  visibility: hidden;
-  outline: none;
-}
-
-#filter-input-guests {
-  background-color: transparent;
-  width: 5vw;
-  margin-left: 4.5vw;
-  border-top: transparent;
-  border-left: transparent;
-  border-right: transparent;
-  border-bottom: 1px solid black;
-  visibility: hidden;
-  outline: none;
-}
-
-#filter-input-submit {
-  top: -3vw;
-  margin-left: 7.5vw;
-  height:6vw;
-  width: 8vw;
-  position: absolute;
-  left: 49.6vw;
-  border-radius: 4vw;
-  color: transparent;
-  background-color: transparent;
-  border: transparent;
-  cursor: pointer;
-  outline: transparent;
-}
-
 /* dropdown profile in header */
 #dropdown-profileInHeader {
   right: 5vw;
@@ -643,7 +634,7 @@ body {
 }
 
 #dropdown-profileInHeader > div {
- display: flex;
+  display: flex;
   flex-direction: column;
   width: 14vw;
   margin-left: auto;
@@ -665,6 +656,3 @@ body {
 #dropdown-profileInHeader > div > a:hover {
   color: grey;
 }
-
-
-
