--- a/HomePage.css
+++ b/HomePage.css
@@ -337,6 +337,76 @@ body {
   font-size: 1vw;
 }
 
+/* LogIn */
+#homePage-logIn {
+  position: relative;
+  margin-left: 35vw;
+  top: 5vw;
+  position: absolute;
+  background-color: rgb(237, 238, 236);
+  width: 30vw;
+  height: 25vw;
+  border-radius: 3vw;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+  display: none;
+}
+#homePage-logIn > p {
+  display: flex;
+  margin-left: 5vw;
+  margin-top: 1vw;
+  margin-bottom: 2vw;
+  font-size: 2vw;
+  font-weight: bold;
+}
+
+#homePage-logIn > form {
+  display: flex;
+  flex-direction: column;
+  width: 20vw;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#homePage-logIn > form > label {
+  margin-bottom: 0.5vw;
+}
+
+#username-logIn,
+#password-logIn {
+  margin-bottom: 0.5vw;
+  background-color: transparent;
+  border-top: transparent;
+  border-left: transparent;
+  border-right: transparent;
+  border-bottom: 1px solid black;
+  outline: none;
+}
+
+#logIn-button {
+  padding: 1vw 1vw;
+  margin-top: 3vw;
+  border-radius: 2vw;
+  border: 1px solid grey;
+  outline: none;
+}
+
+#logIn-button:hover {
+  background-color: rgb(206, 206, 206);
+}
+
+#homePage-logIn > div {
+  margin-top: 1.5vw;
+  width: 28vw;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.fa-times-circle {
+  display: flex;
+}
+
 /* Section Towns */
 #homePage-towns {
   margin-top: 5vw;
@@ -651,6 +721,7 @@ body {
   color: black;
   font-size: 1.1vw;
   margin-top: 0.5vw;
+  cursor: pointer;
 }
 
 #dropdown-profileInHeader > div > a:hover {
