--- a/HomePage.css
+++ b/HomePage.css
@@ -96,6 +96,10 @@ button {
 body {
   font-family: "Montserrat", sans-serif;
 }
+#PlacesToStay {
+  display: flex;
+  flex-direction: column;
+}
 
 /* header */
 #homePage-header {
@@ -201,7 +205,6 @@ body {
   height: 6vw;
   margin-left: auto;
   margin-right: auto;
-  display: flex;
   justify-content: space-around;
   margin-top: 3vh;
   background-color: honeydew;
@@ -412,7 +415,6 @@ body {
   margin-top: 5vw;
   display: flex;
   flex-wrap: wrap;
-
   justify-content: center;
 }
 .homePage-towns-container {
