--- a/View/filteredHomesPage.css
+++ b/View/filteredHomesPage.css
@@ -1,10 +1,53 @@
+#homePage-filtered-homes-section {
+  display: none;
+  flex-direction: column;
+  align-content: center;
+}
+
+#homePage-filtered-homes-div {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+
+#title-filtered-homes {
+  font-size: 2.5vw;
+  margin-top: 4vw;
+  text-align: center;
+}
+
 .home-template {
-  width: 10vw;
-  height: 10vw;
+  width: 20vw;
+  height: 15vw;
   position: static;
+  margin: 4vw 2vw;
 }
 
 .home-template > img {
-  width: 10vw;
-  height: 10vw;
+  width: 20vw;
+  height: 13vw;
+  border-radius: 1vw;
+}
+
+.text-template {
+  width: 15vw;
+}
+
+#filtered-homes-buttons {
+  height: 3vw;
+  display: flex;
+  justify-content: center;
+  margin-top: 1vw;
+}
+
+#filtered-homes-buttons > button {
+  font-size: 1.1vw;
+  margin: 0.5vw;
+  transition: font-size 0.5s;
+  outline: none;
+}
+
+#filtered-homes-buttons > button:hover {
+  font-size: 1.2vw;
+  font-weight: bold;
 }
