--- a/View/OnlineExperiencesPage.css
+++ b/View/OnlineExperiencesPage.css
@@ -68,7 +68,7 @@
 }
 
 #filter-section-header {
-  background-image: url(pictures/snimka.jpeg);
+  background-image: url(../pictures/backgroundPic.jpeg);
   background-size: 100%;
   background-repeat: no-repeat;
   height: 38vw;
