--- a/View/filteredHomesPage.css
+++ b/View/filteredHomesPage.css
@@ -30,7 +30,11 @@
 }
 
 .text-template {
-  width: 15vw;
+  width: 20vw;
+  text-align: center;
+}
+.template-price {
+  font-size: 1vw;
 }
 
 #filtered-homes-buttons {
